--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.xsgzt.b2c.seller.frameworkdemo.TestActivity">
+        <activity android:name="com.xsgzt.b2c.seller.frameworkdemo.com.xsgzt.TestActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
